# us-stock-quant

./: .gitignore  AGENTS.md  FUTU_SETUP.md  README.md  SUPABASE_SETUP.md  a_stocks.csv  account_dashboard.py  app.py  ashare.py  auth.py  calibrate.py  calibrated_weights.json  cn_news.py  com.brad.stockquant.plist  config.example.json  earnings.py  engine.py  explain.py  factors_plus.py  favorites.py  funds.py  futu_live_guard.py  futu_loop.py  futu_news.py  futu_status.py  futu_trader.py  llm.py  news.py  notify.py  orderstore.py  paper.py  paper_loop_cn.py  paper_status.py  quotes.py  requirements.txt  resolve.py  run_ai_trader.py  run_daily.py  sector_factor.py  setup_daily_push.sh  (+2 more)
.github/: keepalive_browser.py
.github/workflows/: ai-trader.yml  android.yml  desktop.yml  gen-updater-key.yml  keepalive-loop.yml  keepalive.yml  pages.yml
.streamlit/: config.toml
app-shell/: README.md  gen_icons.py
app-shell/capacitor/: README.md  capacitor.config.json  package.json
app-shell/tauri/: README.md  package.json
app-shell/tauri/src-tauri/: Cargo.toml  tauri.conf.json
app-shell/tauri/src-tauri/capabilities/: default.json
app-shell/tauri/src-tauri/src/: main.rs
app-shell/web/: download.html  index.html  manifest.webmanifest  (+3 more)
scripts/: README.md  install_live_guard_executor_task.ps1  migrate_local_orders_to_supabase.py  open_account_dashboard.vbs  run_futu_loop_hidden.vbs  run_live_guard_executor.ps1  run_live_guard_executor_hidden.vbs  run_paper_loop_cn_hidden.vbs  uninstall_live_guard_executor_task.ps1
state/: paper_account.json  paper_account_cn.json
(+3 files in other folders)
