[package]
name = "stockquant-desktop"
version = "1.0.4"
description = "皓哥量化 Mac/Windows 桌面壳"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
opt-level = "s"
lto = true
strip = true
